--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -233,7 +233,7 @@ table.moduleTable tr.lastSelected td {
 	border-bottom: 2px dotted gray;
 }
 
-div.boxCard, .box-shadow, div.unitTestResult {
+div.boxCard, .box-shadow {
 	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1),
 				0px 2px 10px 0px rgba(0, 0, 0, 0.1);
 	margin:4px;
@@ -457,38 +457,6 @@ a.gc-link {
 .dragtable-col-placeholder * { 
     opacity: 0.0; 
     visibility: hidden; 
-}
-
-div.unitTestResult {
-	width: 1em;
-	height: 2em;
-	float: left;
-	margin: 1px;
-	border-style: outset;
-	border-width: 3px;
-	cursor: pointer;
-}
-
-
-div.unitTestResult.pass {
-	background-color: #0C0;
-	border-color: #0C0;
-}
-div.unitTestResult.failure, div.unitTestResult.error {
-	background-color: red;
-	border-color: red;
-}
-div.unitTestResult.secret:not(.revealed) {
-	background-color: lightgrey;
-}
-div.unitTestResult.secret, div.unitTestResult.revealed {
-	border-color: lightgrey;
-}
-div.unitTestResult.revealed.pass {
-	background: linear-gradient(to top left, lightgrey 30%, #0C0 50%);
-}
-div.unitTestResult.revealed.error, div.unitTestResult.revealed.failure {
-	background: linear-gradient(to top left, lightgrey 30%, red 50%);
 }
 
 /* Buttons */
