--- a/war/static/styles/screen-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-0.0.1-SNAPSHOT.css
@@ -1,7 +1,7 @@
 body {
 	font: normal 14px Arial, Helvetica, sans-serif;
 	padding: 0 10%;
-	background: #fff;
+	background: #f5f5f5;
 	color: #333;
 }
 
@@ -102,6 +102,7 @@ button.floating.plus {
 div.section {
 	box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.1);
 	margin: 3px 6px 6px 3px;
+	background-color: white;
 }
 div.section:not(:last-child) {
 	margin-bottom: 1.5em;
@@ -292,7 +293,6 @@ div.tab-bar a {
 	height: 100%;
 }
 
-
 .star-required {
 	color: #CE1126;
 }
@@ -361,7 +361,6 @@ div.ratingDot.full.r5 {
 	font-weight: bold;
 	line-height: 24px;
 }
-
 textarea.ratingComment {
 	width: 50vw;
 	height: 15vh;
@@ -398,6 +397,30 @@ div.unitTestResult.revealed.pass {
 }
 div.unitTestResult.revealed.error, div.unitTestResult.revealed.failure {
 	background: linear-gradient(to top left, lightgrey 30%, red 30%);
+}
+
+div.search-box {
+	width: 150px;
+	float: right;
+	display: inline-block;
+	margin-right: 40px;
+}
+div.search-box input[type='text'] {
+	margin: 1px 0;
+	padding: 4px 20px 4px 5px;
+	width: 100%;
+	height: auto;
+	outline: 0;
+	border: 1px solid #aaa;
+	background: white url("../images/chosen-sprite.png") no-repeat 100% -20px;
+/* 	background: url("../images/chosen-sprite.png") no-repeat 100% -20px; */
+	font-size: 1.1em;
+	font-family: sans-serif;
+	line-height: normal;
+	border-radius: 0;
+}
+.search-node.not-found {
+	display:none;
 }
 
 table.moduleTable th {
