Updated collapsible.js code to allow whole containers to be headers.

--- a/war/static/styles/jquery.collapsible.css
+++ b/war/static/styles/jquery.collapsible.css
@@ -16,7 +16,7 @@ div.clb-content-wrapper {
 	flex-grow: 1;
 }
 
-div.clb-parent.collapsed .clb-content > *:not(.clb-keep) {
+div.clb-parent.collapsed .clb-content *:not(.clb-keep) {
 	display: none;
 }
 .clb-content::before {
