Updated unit test view page to clarify workflow.
In doing so this fixes the following bugs:
 * Fixed black box test cases created with the copy button not saving
correctly.
 * Fixed delete code or accessory files not working

--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -518,8 +518,8 @@ div.consolePreview {
 	white-space: pre-wrap;
 	width: 100%;
 }
-div.testCase {
-	padding: 0.7em;
+div.testCase + div.testCase {
+	margin-top: 0.7em;
 }
 input.code {
 	font-family: monospace;
