Fixed several bugs with viewFile:  - Fixed images not displaying [PASTA-78]  - Fixed PDF documents not displaying  - Fixed being unable to download non-submission files (e.g. validator code, unit test code) [PASTA-79]

--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -781,3 +781,8 @@ th.handMarkingTable,td.handMarkingTable {
 #ui-datepicker-div {
 	display: none;
 }
+
+.pdf-reader {
+	width: 100%;
+	height: 90vh;
+}
