Added assessment marks report.

--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -832,3 +832,8 @@ th.handMarkingTable,td.handMarkingTable {
 .messages .error {
 	color: #C00;
 }
+
+.report-content .loading {
+	width: 100%;
+	margin: 1em 0;
+}
