Added list of students who haven't yet submitted to submission report.

--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -877,3 +877,15 @@ thead.rotate > tr > th > div > span {
 .ratings-container .ratings td.center {
 	text-align: center;
 }
+
+.not-started-container {
+	display: flex;
+	flex-flow: column wrap;
+	align-content: flex-start;
+	max-height: 200px;
+	overflow: auto;
+}
+.not-started {
+	width: 8em;
+	margin: 0.25em;
+}
