* Updated student home page action buttons to use hover-buttons * Re-styled assessment rating boxes

--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -17,7 +17,10 @@ button, input[type="submit"] {
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2),
 				0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 }
-button.compact, .compact button {
+.button-panel > button.compact,
+.button-panel > input[type=submit].compact,
+button.compact, 
+.compact button {
 	padding: 0.4em 0.6em;
 }
 button.flat,
@@ -439,6 +442,22 @@ div.star-medal img {
 	top: 0.12em;
 }
 
+div.assessment-box {
+	position: relative;
+}
+div.rate-assessment {
+	background-color: white;
+	border-radius: 3px;
+	border-style: solid;
+	border-width: 1px;
+	bottom: 0;
+	box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.1);
+	margin: 1em;
+	padding: 0.5em 1em 1em 1em;
+	position: absolute;
+	right: 0;
+	z-index: 10;
+}
 div.ratingDot {
 	background-repeat: no-repeat;
 	cursor: pointer;
