--- a/war/static/styles/theme.css
+++ b/war/static/styles/theme.css
@@ -200,3 +200,7 @@ table.moduleTable tr.selected {
 .submission-progress .ui-progressbar-value {
 	background: #DC740E;
 }
+
+div.rate-assessment {
+	border-color: #DC740E;
+}
