* Updated student home page action buttons to use hover-buttons * Re-styled assessment rating boxes

--- a/war/static/styles/theme.css
+++ b/war/static/styles/theme.css
@@ -196,3 +196,7 @@ table.moduleTable tr.selected {
 .pasta-loader {
 	border-color: #DC740E;
 }
+
+div.rate-assessment {
+	border-color: #DC740E;
+}
