--- a/war/static/styles/theme.css
+++ b/war/static/styles/theme.css
@@ -196,3 +196,7 @@ table.moduleTable tr.selected {
 .pasta-loader {
 	border-color: #DC740E;
 }
+
+.submission-progress .ui-progressbar-value {
+	background: #DC740E;
+}
