--- a/war/static/styles/highlight.github.css
+++ b/war/static/styles/highlight.github.css
@@ -12,6 +12,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   background: #f8f8f8;
   border-radius: 5px;
   border: 1px solid gray;
+  tab-size: 4;
 }
 
 .hljs-comment,
