Removed competitions from PASTA. Saved a branch "tags/old-competitions" as a reference if competitions are to make a return.

--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -751,7 +751,7 @@ span.expanded-icon {
 	font-size: 1.5em;
 }
 
-.popup, #released, #newArena
+.popup, #released
 	{
 	background-color: white;
 	border-radius: 10px 10px 10px 10px;
