--- a/war/static/styles/main.css
+++ b/war/static/styles/main.css
@@ -3,6 +3,9 @@ body {
     -moz-osx-font-smoothing: grayscale;
 	font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 	font-size: 14px;
+	margin: 0;
+}
+div#body {
 	padding: 0 10%;
 }
 
@@ -28,16 +31,36 @@ input[type="submit"].flat {
 	background: none;
 	box-shadow: none;
 }
+
+@keyframes bounce {
+	0%, 39.05%, 66.67%, 86.19%, 100.00% {
+		transform: translate(50%, 0%);
+	}
+	19.53% {
+		transform: translate(50%, -50.0%);
+	}
+	52.86% {
+		transform: translate(50%, -25.0%);
+	}
+	76.43% {
+		transform: translate(50%, -12.5%);
+	}
+	93.10% {
+		transform: translate(50%, -6.25%);
+	}
+}
 button.floating,
 input[type="submit"].floating {
 	position: fixed;
 	height: 56px;
 	width: 56px;
-	border-radius: 28px;
-	right: 30px;
+	border-radius: 50%;
+	right: 5%;
+	transform: translateX(50%);
 	bottom: 30px;
 	padding: 0;
 	box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.2);
+	animation: 0.5s ease-out 0s 1 bounce;
 }
 button.floating.plus:before {
 	content: "+";
@@ -341,6 +364,9 @@ div.part.no-line + div.part.no-line {
 .float-container {
 	overflow:hidden;
 }
+.right-align {
+	text-align: right;
+}
 .padded {
 	padding:0.5em;
 }
@@ -362,22 +388,21 @@ a:not([href]) {
 	display:none;
 }
 
+div#header {
+	background-color: white;
+}
 div#head {
-	margin-top: 1em;
-	margin-bottom: 1.5em;
+	padding: 1em 1em 0em 1em;
 }
 div#head .title {
 	font-size: 2.5em;
 }
-
-div.link-bar:after {
-	content: "";
-	display: table;
-	clear: both;
+img.logo {
+	height: 72px;
 }
-div.link-bar a {
-	display: block;
-	float: left;
+
+div.link-bar {
+	padding: 0 1em;
 }
 div.link-bar a:not(:last-child) {
 	padding-right: 0.5em;
@@ -387,6 +412,10 @@ div.link-bar a:not(:first-child) {
 }
 div.link-bar:not(.no-bars) a:not(:first-child) {
 	border-left: 1px solid lightgray;
+}
+
+.link-bar .username {
+	font-weight: bold;
 }
 
 div.tab-bar {
@@ -406,6 +435,7 @@ div.tab-bar a {
 	display: block;
 	width: 100%;
 	height: 100%;
+	transition: color 0.2s;
 }
 
 .assessment-mark {
